[package]
name = "hyper-tungstenite"
description = "websockets for hyper servers using tungstenite"
version = "0.9.0"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
keywords = ["websocket", "hyper", "async"]
categories = ["web-programming::websocket", "network-programming"]
repository = "https://github.com/de-vri-es/hyper-tungstenite-rs"
documentation = "https://docs.rs/hyper-tungstenite"

edition = "2021"

[dependencies]
hyper = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
pin-project-lite = "0.2.9"
tokio = "1"
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"

[dev-dependencies]
assert2 = "0.3.4"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.12" }


[[example]]
name = "simple"
path = "examples/simple.rs"
